--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "core-js": "~3.0.1",
+    "dangerous-html": "0.1.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
-    "zone.js": "~0.11.4",
-    "dangerous-html": "0.1.13"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.0",
     "@angular/cli": "^14.0.0",
     "@angular/compiler-cli": "^14.0.0",
     "@types/node": "^12.11.1",
-    "typescript": "^4.7.3"
+    "typescript": ">=4.8.2 and <4.9.0"
   }
 }
