--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/@costlydeveloper/ngx-awesome-popup/styles/theme.css",
               "src/styles.css"
             ],
             "scripts": []
